
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:showIn="navigation_view"
    tools:context="com.example.myapplicationpls.MainActivity">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/action_home"
        />
    <item android:title="Workout zone">
        <menu>
            <item
                android:id="@+id/actionTraining2"
                android:icon="@drawable/baseline_add_24"
                android:title="@string/action_workout"
                />
            <item
                android:id="@+id/action_history"
                android:icon="@drawable/baseline_history_24"
                android:title="History"
                />
            <item
                android:id="@+id/action_updateWeight"
                android:icon="@drawable/baseline_monitor_weight_24"
                android:title="@string/action_updateWeight" />
            <item
                android:id="@+id/action_chartsTraining"
                android:icon="@drawable/baseline_show_chart_24"
                android:title="@string/action_chartsTrainings" />
            <item
                android:id="@+id/action_how_to"
                android:icon="@drawable/baseline_emoji_how_to"
                android:title="Gym Workouts - GUIDE"/>
        </menu>
    </item>
    <item android:title="Fitness zone">
        <menu>
            <item
                android:id="@+id/action_addFood"
                android:icon="@drawable/baseline_add_24"
                android:title="Add daily meal"/>
            <item
                android:id="@+id/action_hydrate"
                android:icon="@drawable/baseline_water_drop_24"
                android:title="@string/action_hydrate" />
            <item
                android:id="@+id/action_addToDatabase"
                android:icon="@drawable/baseline_add_to_drive_24"
                android:title="@string/action_addFood" />
            <item
                android:id="@+id/action_chartsMeals"
                android:icon="@drawable/baseline_show_chart_24"
                android:title="@string/action_chartsMeals" />
        </menu>
    </item>
    <item android:title="My panel">
        <menu>
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/baseline_settings_applications_24"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        </menu>
    </item>


    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/action_logout"
        android:onClick="close"/>

</menu>