<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight">


    <ImageView
        android:id="@+id/fit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"

        android:src="@drawable/logowithoutback"
        app:layout_constraintBottom_toTopOf="@+id/boxlog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <LinearLayout
        android:id="@+id/boxlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_rounded_corners"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fit">
        <TextView
            android:id="@+id/idlogin"
            android:text="@string/loginEditB"
            android:letterSpacing="0.15"
            android:textColor="#E1D9D1"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/yellow"
            android:textColorHint="@color/yellow"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/black"
            app:helperTextTextColor="@color/yellow"
            app:boxStrokeColor="@color/yellow"
            >
        <EditText
            android:id="@+id/Lusername"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawablePadding="12dp"
            android:textSize="25dp"
            android:drawableTint="@color/yellow"
            android:hint="@string/email"
            android:textColorHint="@color/yellow"

            android:layout_marginBottom="20dp"
            android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:passwordToggleEnabled="true"
    app:hintTextColor="@color/yellow"
    android:textColorHint="@color/yellow"
    app:boxBackgroundMode="outline"
    app:boxBackgroundColor="@color/black"
    app:boxStrokeColor="@color/yellow"
    >
        <EditText
            android:id="@+id/Lpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/yellow"
            android:drawableStart="@drawable/baseline_lock_person_24"
            android:hint="@string/passEdit"
            android:textColorHint="@color/yellow"
            android:textCursorDrawable="@null"/>
</com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/checkBoxRem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"

            android:textColor="@color/yellow">

        </CheckBox>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Forgot your password?"
                android:textColor="@color/grayLight"
                android:gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" Click here!"
                android:textColor="#8794A6"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_login"
        app:backgroundTint="@null"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@color/yellow"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="300dp"
        android:text="@string/loginEdit"
        app:layout_constraintTop_toBottomOf="@+id/boxlog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/button_login">

        <TextView
            android:id="@+id/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Do not have an account?"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signupT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Sign up!"
            android:textColor="@color/yellow"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>